Feat: Add Interview Schedule page
We are using tui.calendar for now but it has some limitations so we might need to change that in future after consulting with the team.

--- a/src/pages/dashboard/email/components/styles.css
+++ b/src/pages/dashboard/email/components/styles.css
@@ -1,3 +1,18 @@
+@media (min-width: 650px) {
+	.ce-toolbar__actions {
+		right: 100% !important;
+		left: inherit !important;
+		top: 5px !important;
+	}
+	.ce-toolbox .ce-popover {
+		right: inherit !important;
+	}
+}
+
+.highlight {
+	background-color: yellow;
+}
+
 .dark .cdx-block,
 .dark .ce-header,
 .dark .inlineToolButton,
