--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
 		--popover: 0 0% 100%;
 		--popover-foreground: 0 0% 3.9%;
 
-		--primary: 0 0% 9%;
+		--primary: 202 80% 41%;
 		--primary-foreground: 0 0% 98%;
 
 		--secondary: 0 0% 95%;
@@ -46,9 +46,6 @@
 		--popover: 0 0% 3.9%;
 		--popover-foreground: 0 0% 98%;
 
-		--primary: 0 0% 98%;
-		--primary-foreground: 0 0% 9%;
-
 		--secondary: 0 0% 14.9%;
 		--secondary-foreground: 0 0% 98%;
 
@@ -71,6 +68,9 @@
 	* {
 		@apply border-border;
 	}
+	html {
+		font-size: 17px;
+	}
 	body {
 		@apply bg-background text-foreground;
 		font-family: "Poppins";
@@ -79,7 +79,7 @@
 		@apply bg-white dark:bg-inherit shadow-sm rounded-lg p-6;
 	}
 	.grid-dashboard {
-		@apply grid grid-cols-1 md:grid-cols-[60%_1fr] gap-4 lg:gap-6;
+		@apply grid grid-cols-1 md:grid-cols-[65%_1fr] gap-4 lg:gap-6;
 	}
 	.card-primary {
 		@apply bg-white dark:bg-inherit dark:border shadow-sm rounded-lg p-6;
