Chores: Add 404 Error Page

--- a/src/pages/dashboard/email/components/styles.css
+++ b/src/pages/dashboard/email/components/styles.css
@@ -7,6 +7,10 @@
 	.ce-toolbox .ce-popover {
 		right: inherit !important;
 	}
+	.codex-editor--narrow .ce-settings .ce-popover {
+		right: inherit !important;
+		left: inherit !important;
+	}
 }
 
 .highlight {
