--- a/src/index.css
+++ b/src/index.css
@@ -14,11 +14,11 @@
 		--popover: 0 0% 100%;
 		--popover-foreground: 0 0% 3.9%;
 
-		--primary: 202 80% 41%;
+		--primary: 202 85% 41%;
 		--primary-foreground: 0 0% 98%;
 
 		--secondary: 0 0% 95%;
-		--secondary-foreground: 0 0% 9%;
+		--secondary-foreground: 236 26% 11%;
 
 		--muted: 0 0% 96.1%;
 		--muted-foreground: 0 0% 45.1%;
@@ -30,6 +30,8 @@
 		--destructive-foreground: 0 0% 98%;
 
 		--border: 0 0% 89.8%;
+		--fc-border-color: hsl(0, 0%, 89.8%);
+
 		--input: 0 0% 89.8%;
 		--ring: 0 0% 3.9%;
 
@@ -59,6 +61,10 @@
 		--destructive-foreground: 0 0% 98%;
 
 		--border: 0 0% 14.9%;
+
+		--fc-border-color: hsl(0, 0%, 14.9%);
+		--fc-today-bg-color: rgba(255, 255, 255, 0);
+
 		--input: 0 0% 14.9%;
 		--ring: 0 0% 83.1%;
 	}
@@ -72,11 +78,11 @@
 		font-size: 17px;
 	}
 	body {
-		@apply bg-background text-foreground;
+		@apply bg-background text-secondary-foreground;
 		font-family: "Poppins";
 	}
 	.container-primary {
-		@apply bg-white dark:bg-inherit shadow-sm rounded-lg p-6;
+		@apply bg-white dark:bg-inherit shadow-sm rounded-lg p-6 dark:border;
 	}
 	.grid-dashboard {
 		@apply grid grid-cols-1 md:grid-cols-[65%_1fr] gap-4 lg:gap-6;
